--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -14,7 +14,7 @@
     <footer id="footer"></footer>
 
     <script>
-        {% if username == "" %}
+        {% if acc == 0 %}
         $("#header").load("/static/html/header0.html");
         {% else %}
         $("#header").load("/static/html/header1.html");
