--- a/templates/login.html
+++ b/templates/login.html
@@ -19,7 +19,7 @@
         <label for="password">密码:</label>
         <input type="password" id="password" name="password" required>
         <br />
-        <input type="submit" id="submit" value="注册">
+        <input type="submit" id="submit" value="登录">
 
     </form>
 
