--- a/templates/person.html
+++ b/templates/person.html
@@ -10,7 +10,8 @@
 <body>
     <header id="header"></header>
 
-    <p>您好，{{username}}，您可以在下方管理您上传的书</p><br />
+    <p>您好，{{username}}，您可以在下方管理您上传的书</p>
+    <p>注意：更改后需刷新界面</p><br />
 
     <table>
         <thead>
@@ -28,10 +29,12 @@
                 <td>{{data[1]}}</td>
                 {% if data[2] == 0 %}
                 <td>未消毒</td>
+                <td><a href="/book/clean?id={{data[4]}}&to=1" target="_blank">更改为已消毒</a></td>
                 {% else %}
                 <td>已消毒</td>
+                <td><a href="/book/clean?id={{data[4]}}&to=0" target="_blank">更改为未消毒</a></td>
                 {% endif %}
-                <td><a href="/book/delete?id={{data[4]}}">删除</a></td>
+                <td><a href="/book/delete?id={{data[4]}}" target="_blank">删除</a></td>
             </tr>
             {% endfor %}
         </tbody>
