--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <link href="/static/css/global.css" rel="stylesheet" type="text/css" />
 
 
 
