--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title></title>
     <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <link href="/static/css/global.css" rel="stylesheet" type="text/css" />
+
 </head>
 <body>
     <header id="header"></header>
@@ -11,7 +13,7 @@
     <div id="main">
         <h1>欢迎登录书籍共享平台</h1><br />
         {% if acc == "1" %}
-        <p>{{username}}，你好。欢迎<a href="/book/add/">添加书籍</a></p><br />
+        <p><span class="username">{{username}}</span>，你好。欢迎<a href="/book/add/">添加书籍</a></p><br />
         {% else %}
         <p>添加书籍，请先<a href="/login">登录</a></p><br />
         {% endif %}
